nginx-pod-v1.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-v1
  labels:
    app: nginx-v1
spec:
  containers:
    - name: nginx-v1
      image: nginx:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-v1
spec:
  selector:
    app: nginx-v1
  ports:
    - port: 80
  type: ClusterIP
---
