nginx-pod-v2.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-v2
  labels:
    app: nginx-v2
spec:
  containers:
    - name: nginx-v2
      image: nginx:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-v2
spec:
  selector:
    app: nginx-v2
  ports:
    - port: 80
  type: ClusterIP
---
